Aktualisierung Teil 2 Hausaufgabe 3 26.04.

--- a/Moussavi/hausaufgabe03a.Rmd
+++ b/Moussavi/hausaufgabe03a.Rmd
@@ -28,6 +28,7 @@ Es gibt in RStudio und im Internet **viel** zu Markdown. RStudio nutzt einen bes
 
 - Ich möchte meine gesammelten Datenmengen statistisch auswerten können
 - Ich möchte statistische Angaben in Studien verstehen können
+- Grundkenntnisse über Programmiersprachen
 
 
 ## R-Code-Blöcke
