--- a/Moussavi/hausaufgabe03a.Rmd
+++ b/Moussavi/hausaufgabe03a.Rmd
@@ -1,6 +1,8 @@
 % Hausaufgabe 03
 % Romina Moussavi <Moussavi@students.uni-marburg.de>
 % 2014-04-26
+# Lizenz
+Diese Datei darf weiter als Beispiel genutzt werden.
 
 Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
 
